updated station list

--- a/04_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
+++ b/04_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
@@ -195,7 +195,7 @@ In Guide \#1, we'll use the stations.active.oldest dataset to download the daily
 <<>>=
 # export file to csv
 write.csv(stations.active.oldest, 
-    here("04_Regional_Climate_Trends", "Data", "SP24", 
+    here("04_Regional_Climate_Trends", 
     "stations.active.oldest.csv"))
 @
 
