--- a/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
@@ -12,7 +12,7 @@
 
 \title{Analyzing Climate Trends}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.40)} 
+\date{\today~(ver. 0.42)} 
 
 \begin{document}
 \maketitle
@@ -33,6 +33,10 @@ In general, understanding the climate is a question of averages and ranges, of s
 
 \subsection{Approach}
 
+Here's how I might start: Read the EPA summaries and see what stands out as compelling types of analyses. Then read news articles on the region and see what qualifies as "weather" news in the region. 
+
+I suggest you consider 3-5 questions that you think are interesting and then we can work together to see if we can answer those questions using the station data. 
+
 We need to address several things that might get in the way of our analysis: 
 
 \begin{enumerate}
@@ -44,6 +48,7 @@ We need to address several things that might get in the way of our analysis:
 
 In contrast to Guide 1 and 2, I couldn't separate the explanation of code from the code and statistical analysis. If you have suggestions of how to stream line this, I am all ears!
 
+Moreover, I haven't completed every time of analysis yet, but I tried to post the potential ones that I could think of. If you have some idea that is missing, let me know and we can figure out how to create an analysis for it!
 
 
 \subsection{R Code with Custom Functions}
@@ -74,7 +79,6 @@ print(read_and_load_data.fun)
 @
 
 \end{description}
-
 
 \section{Analyzing Monthly Trends}
 
@@ -120,7 +124,6 @@ Station data frames were called GSOM (Monthly data). See if you can interpret ea
 <<AlternativeLoopFunction, eval=TRUE, echo=FALSE>>=
 print(MonthEvalStats.fun)
 @
-
 
 \subsection{Filtering Seasonal Effect}
 
@@ -204,13 +207,20 @@ ggplot( ) +
 
 Days without rain...within a calendar year... bleed over between years isn't captured.. This is screwed up, Drought.run needs work.
 
+\subsection{Standardized Precipitation Evapotranspiration Index (SPEI)}
+
+The Standardized Precipitation Evapotranspiration Index (SPEI) is an extension of the widely used Standardized Precipitation Index (SPI). The SPEI is designed to take into account both precipitation and potential evapotranspiration (PET) in determining drought. Thus, unlike the SPI, the SPEI captures the main impact of increased temperatures on water demand. 
+
+I don't know if we can do this yet, but I am working on the code to develop the SPEI using a publish R package \url{https://cran.r-project.org/web/packages/SPEI/}.
+
+
+
 \subsubsection{Days in a Row without Rain}
 One proxy for drought is a long period without rain. This is a bit tricky because it's not just the number of days without rain, but the number of days without rain in a row. So, I found a function call rle() that counts the number of days in a row without rain.
 
 <<show_droughtCount.fun, echo=FALSE>>=
 print(droughtCount.fun)
 @
-
 
 \begin{description}
 
@@ -248,7 +258,9 @@ text(min(Drought.run$Year, na.rm=T), max(Drought.run$lengths, na.rm=T),
 
 @
 
-\subsubsection{Rainfall Probability Distributions over Time}
+\subsubsection{Changes in the Rainfall Probability Distributions}
+
+In this example, we could either use rnorm or a kernel density estimate, for each 10 years or 20 years segmments and see if there is a difference over time. In general, these can be pretty compelling. But it's the mean that is really driving the analysis, so that might be something to look at by decade to see if there is a trend. 
 
 <<eval=TRUE, echo=FALSE>>=
 #library(lubridate)
@@ -262,7 +274,7 @@ floor_decade  = function(value){ return(as.integer(value/10)*10) }
 station$Decade <- floor_decade(station$YEAR)
 station[sample(1:nrow(station), 10), c(9, 1,3,4,10, 11, 12)]
 #station$Score <- floor_score(station$YEAR)
-names(station)
+#names(station)
 station$Season <- ifelse(station$MONTH %in% c(3,4,5), "Spring", 
                   ifelse(station$MONTH %in% c(6,7,8), "Summer", 
                   ifelse(station$MONTH %in% c(9,10,11), "Fall", 
@@ -286,11 +298,22 @@ PRCP.Decade.mean <- spread(PRCP.Decade.mean, Season, VALUE)
 <<echo=FALSE, results='asis'>>=
 xtable(PRCP.Decade.mean)
 @
-I don't see a pattern!  But maybe we need to use a statistical approach!
 
 \subsection{Record Setting Temperature Records}
 
 In many cases, people seem to "feel" how temperature has been changing over time, and new records seem to capture the attention in the media. So, we'll create a updated record of maximum temperatures and display them. 
+
+How to do this? These might be the steps!
+
+\begin{enumerate}
+\item First, we'll calculate the mean temperature for the entire period.
+\item We might sort the data set, by highest/lowest temperature for each day of the year. 
+\item Then we can see if the frequency of the highest/lowest temperatures is increasing over time.
+\item We'll then create a new column that will be the minimum temperature for each day.
+\item We'll then create a new column that will be the maximum temperature for each day, but only if it is the maximum temperature for that day.
+\item We'll then create a new column that will be the minimum temperature for each day, but only if it is the minimum temperature for that day.
+\end{enumerate}
+
 
 <<extremetempplot, echo=FALSE, results='hide', eval=FALSE>>=
 CHCND_Mean = mean(CHCND$TMAX, na.rm=T)
@@ -328,8 +351,7 @@ head(CHCND)
 @
 
 
-
-This is a common way to communicate temperatures changes. I suspect we have a better sense of change when we notice "extreme" events...
+This is a common way to communicate temperatures changes. I suspect we have a better sense of change when we notice "extreme" events, and this also fits the news media's need for "new" stories.
 
 <<eval=FALSE, echo=FALSE>>=
 names(CHCND)
@@ -371,9 +393,9 @@ ggplot( ) +
       values = c("Record Highs" = "red", "Record Lows" = "blue"))
 @
 
-I tried to use a for loop and in then statements and it was painfully slow, so I converted the data to a matrix that can be used by barplots with much more effeciency!
+%I tried to use a for loop and in then statements and it was painfully slow, so I converted the data to a matrix that can be used by barplots with much more effeciency!
 
-Create the matrix
+%Create the matrix
 <<CHCNDmatrix, eval=FALSE, echo=FALSE>>=
 library(lubridate)
 str(CHCND)
@@ -484,16 +506,16 @@ barplot(height = R1$TMIN, space=0, add = TRUE, axes = FALSE, col="blue")
 dev.off()
 @
 
-The patterns of record temperatures often shows increasing number of new high temperature records  and fewer record low temperatures more recently, but as usual, it depends on the location (Figure~\ref{fig:Records}).
-\begin{figure}
+%The patterns of record temperatures often shows increasing number of new high temperature records  and fewer record low temperatures more recently, but as usual, it depends on the location (Figure~\ref{fig:Records}).
+%\begin{figure}
 %\includegraphics[width=1.00\textwidth]{\Sexpr{paste0(png_private, records.png)}}
-\caption{Daily temperatures that have been the highest on record (in red) and lowest on record (in blue). In some cases, climate change has created more records in the recent decades, while other stations seem don't show that trend.}
-\label{fig:Records}
-\end{figure}
+%\caption{Daily temperatures that have been the highest on record (in red) and lowest on record (in blue). In some cases, climate change has created more records in the recent decades, while other stations seem don't show that trend.}
+%\label{fig:Records}
+%\end{figure}
 
-\subsection{Iterate TMAX vs. Month Boxplots}
+%\subsection{Iterate TMAX vs. Month Boxplots}
 
-Evaluating the changes in TMAX and Monthly temperatures might be useful, but for now, I think it's hard to see the patterns. 
+%Evaluating the changes in TMAX and Monthly temperatures might be useful, but for now, I think it's hard to see the patterns. 
 
 <<boxplots, eval=FALSE, echo=FALSE, results='hide'>>=
 for(i in min(CHCND$Year+5):max(CHCND$Year)){
@@ -513,29 +535,41 @@ with(sumstats[sumstats$Param=="TMAX",], text(Month, symbol.y, Symbol, col="red",
 @
 
 
-\subsection{Four Plots Compelling Figures}
+%\subsection{Four Plots Compelling Figures}
 
-To test the code, I have created graphics that can then be used in the animation process, i.e. try to create code that doesn't get too complicated and then fail! 
+%To test the code, I have created graphics that can then be used in the animation process, i.e. try to create code that doesn't get too complicated and then fail! 
 
-The four plots are: 
+%The four plots are: 
 
-\begin{enumerate}
-\item The first plot is the TMIN Trend Line (month of X?)
+%\begin{enumerate}
+%\item The first plot is the TMIN/TMAX Trend Line with largest significant trend
+%\item Box Plot of TMAX or TMAX with asterisks with signficant trends
+%\item The third plot is the TMIN and TMAX for the month of the minimum TMIN.
+%\item The fourth plot is the TMIN and TMAX for the month of the minimum TMAX.
+%\end{enumerate}
 
-<<echo=TRUE, eval=TRUE>>=
-TMIN in the March, at station USC00040693
-station = subset(USC00040693.anomamly, subset(MONTH==3, ELEMENT=="TMIN")
+<<echo=TRUE, eval=FALSE>>=
+#TMIN in the March, at station USC00042294
+par(mfrow=c(1,1))
+station = subset(USC00042294.anomalies[[2]], subset=(MONTH==3))
                  
 plot(TMIN.a ~ YEAR, data= station, type="p", col="grey", pch=19, 
      xlab="Year", ylab="Temperature Anomaly (C)", main="TMIN Data")
 
 TMIN.March.lm = lm(TMIN.a ~ YEAR, data= station)
+abline(coef(TMIN.March.lm), col="red" )
+
+%\item Box Plot of TMAX.
 
 
-\item Box Plot of TMAX.
-\item The third plot is the TMIN and TMAX for the month of the minimum TMIN.
-\item The fourth plot is the TMIN and TMAX for the month of the minimum TMAX.
-\end{enumerate}
+station = subset(USC00042294.anomalies[[1]])
+
+boxplot(TMAX ~ MONTH, data= station, xlab="Month", ylab="Temperature Anomaly (C)", 
+        main="TMAX Data", col="grey")
+                 
+    )
+
+
 
 
 <<static_template, eval=FALSE, echo=FALSE>>=
@@ -666,9 +700,9 @@ dev.off()
 Keeping it simple is critical in communicating scientific information. In this section, I try to come up with a consistent message for every state and a simple graphic. 
 
 \subsubsection{Change Point Analysis}
-First, TMIN and TMAX and change point analysis...
+First, TMIN and TMAX and change point analysis, I need to do some background in this, but I used this method in a recent paper with co-author, but I didn't do that part of the analysis, so more reading is needed (\url{https://cran.r-project.org/web/packages/mcp/readme/README.html}).
 
-https://cran.r-project.org/web/packages/mcp/readme/README.html
+
 
 <<echo=FALSE, eval=FALSE>>=
 
@@ -734,7 +768,7 @@ plot(fit2) + plot_pars(fit2, pars = c("cp_1"), type = "dens_overlay")
 
 @
 
-Let's create a figure that simplifies the narrative, if we can!
+%Let's create a figure that simplifies the narrative, if we can!
 
 <<KISS, eval=FALSE, echo=FALSE>>=
 
@@ -817,7 +851,7 @@ dev.off()
 
 To highlight the patterns of change, it might be useful to analyze how the probability ditributuion might change -- we can use a normal probability distribion as a theoretical distribution (and we can check if this distribuion is approrpriate with a Chi-Square test), or we can use the data to create a emperical distribution, which is my favored approach. 
 
-I started with decade bins, but used 20 years bins (scores) to simplify the graphics while keeping a pretty good temporal resolution.
+We might start with decade bins, or 20 years bins (scores) to simplify  the analysis. 
 
 <<normalPDF, echo=FALSE, eval=FALSE>>=
 library(wesanderson)
@@ -921,7 +955,7 @@ text(PPT.anomaly.list$PPT.anom[i,1], Anom.y*.96,
 dev.off()
 @
 
-This figure is pretty effective, but still needs work. 
+%This figure is pretty effective, but still needs work. 
 
 %\begin{figure}
 %\includegraphics[width=1.00\textwidth]{\Sexpr{paste0(png_private, GSOM_dnorm.png)}}
@@ -931,7 +965,7 @@ This figure is pretty effective, but still needs work.
 
 \subsection{Using library densEstBayes}
 
-Now, I used a screen split to look at the distribution of the temperate anomolies. First, we look at a simple histogram of the entire dataset. 
+%Now, I used a screen split to look at the distribution of the temperate anomolies. First, we look at a simple histogram of the entire dataset. 
 
 <<eval=FALSE, echo=FALSE,>>=
 par(mfrow=c(1,1))
@@ -940,7 +974,7 @@ hist(GSOM2$TMIN.anom, col = "gold",
      xlab = "Minimum Temperature Anomaly (°F)")
 @
 
-The data center around zero, as expected, but are these normally distributed? 
+%The data center around zero, as expected, but are these normally distributed? 
 
 %For TMAX there is a \Sexpr{round(shapiro.test(GSOM2$TMAX.anom)$p.value, 7)} probability that the distribution is the same as the normal distribution. For TMIN there is a \Sexpr{round(shapiro.test(GSOM2$TMIN.anom)$p.value, 7)} probability that the distribution is the same as the normal distribution. For PPT is a \Sexpr{round(shapiro.test(GSOM2$PPT.anom)$p.value, 7)} probability that the distribution is the same as the normal distribution.
 
@@ -958,7 +992,7 @@ These values suggest that there is good reason
 
 %Sexpr{text} the normal probability distribution. 
 
-Next we use a function to estimate the probability distribution using a markof chain the creates an estimated probability distribution. This doesn't always work when the distribution is not even and their only 10 years of data per slot. I suspect, I should make this by every 20 years. Plus that will go way faster and I think the data visualization will be more robust. 
+%Next we use a function to estimate the probability distribution using a markof chain the creates an estimated probability distribution. This doesn't always work when the distribution is not even and their only 10 years of data per slot. I suspect, I should make this by every 20 years. Plus that will go way faster and I think the data visualization will be more robust. 
 
 <<estDensity, echo=FALSE, warning=FALSE, results='hide', eval=FALSE>>=
 GSOM_estPDF.png = paste0(fips$State2, "_", stid, "_GSOM_estPDF.png")
@@ -1049,7 +1083,7 @@ dev.off()
    print("Skipping estimated density distribution chunk")}
 @
 
-The process to create these figures is very time consuming, so in general, I need to come up with an if then statement to avoid creating these everytime!
+%The process to create these figures is very time consuming, so in general, I need to come up with an if then statement to avoid creating these everytime!
 
 %\begin{figure}
 %\includegraphics[width=1.00\textwidth]{\Sexpr{paste0(png_private, GSOM_estPDF.png)}}
@@ -1059,6 +1093,8 @@ The process to create these figures is very time consuming, so in general, I nee
 
 
 \subsection{Probability Distributions}
+
+Thining more abou this one...
 
 <<animated_normalPDFs, echo=FALSE, results='hide', eval=FALSE>>=
 
@@ -1152,10 +1188,10 @@ image_write(GSOM_animation, paste0(gif_private, GSOM_dnorm.gif))
 @
 
 
-The file is saved in the main directory. 
+%The file is saved in the main directory. 
 
 
-\subsection{4 Weather Trend Plots}
+%subsection{4 Weather Trend Plots}
 
 <<animate, echo=FALSE, results='hide', eval=FALSE>>=
 panel4.gif = paste0(fips$State2, "_", stid, "_4panel.gif")
@@ -1285,7 +1321,7 @@ image_write(GSOM_animation, paste0(gif_private, panel4.gif))
 @
 
 
-The file is saved in the main directory. 
+%The file is saved in the main directory. 
 
 
 \subsection{Evaluating Records}
