fix names of functions

--- a/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
@@ -10,6 +10,10 @@
     citecolor=violet
 }
 
+\usepackage[dvipsnames]{xcolor}
+\colorlet{LightRubineRed}{RubineRed!100}
+\definecolor{mypink2}{RGB}{219, 48, 122}
+
 \title{Analyzing Climate Trends}
 \author{Marc Los Huertos}
 \date{\today~(ver. 0.42)} 
@@ -53,13 +57,13 @@ Moreover, I haven't completed every time of analysis yet, but I tried to post th
 
 \subsection{R Code with Custom Functions}
 
-Run the \href{https://github.com/marclos/RTricks/blob/master/04_Regional_Climate_Trends/Guides/Guide3.R}{Guide3.R} code and the functions will be loaded into your environment automatically and are designed to help you analyze your statio data. 
+Run the \href{https://github.com/marclos/RTricks/blob/master/04_Regional_Climate_Trends/Guides/Guide3functions.R}{Guide3functions.R} code and the functions will be loaded into your environment automatically and are designed to help you analyze your statio data. 
 
 <<setup, echo=FALSE, results='hide', message=FALSE>>=
 datafolder = "/home/mwl04747/RTricks/04_Regional_Climate_Trends/Data/SP24/"
 library(xtable)
 library(here)
-source(here("04_Regional_Climate_Trends", "Guides", "Guide3.R"))
+source(here("04_Regional_Climate_Trends", "Guides", "Guide3functions.R"))
 @
 
 As we get further into the project, these code chunks may require tweaking because of the questions you are interested for your location falls outside the design of the custom functions. Please let Marc or the mentors know to get assistance tweaking the code!
